<resources>
    <string name="app_name">ExamenFinal2</string>
    <string name="usuario_nuevo">Crear cuenta</string>
    <string name="usuario_registrado">¿Ya eres miembro? Iniciar</string>
    <string name="arrancar">Arrancar</string>
    <string name="parar">Parar</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="crono_inicial">00</string>
    <string name="puntos">:</string>
    <string name="mis_horarios">Mis horarios</string>
    <string name="acerca_de">Acerca de</string>
</resources>