<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jorizq.examenfinal2.ActivityCronometro">

    <TextView
        android:id="@+id/activity_cronometro_horas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="8dp"
        android:text="@string/crono_inicial"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_cronometro_arrancar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.508" />

    <TextView
        android:id="@+id/activity_cronometro_minutos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/crono_inicial"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_cronometro_arrancar"
        app:layout_constraintStart_toEndOf="@+id/activity_cronometro_separador1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.508" />

    <TextView
        android:id="@+id/activity_cronometro_segundos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/crono_inicial"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_cronometro_arrancar"
        app:layout_constraintStart_toEndOf="@+id/activity_cronometro_separador2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.508" />

    <Button
        android:id="@+id/activity_cronometro_arrancar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/arrancar"
        app:layout_constraintBottom_toTopOf="@+id/activity_cronometro_parar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/activity_cronometro_reiniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/reiniciar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/activity_cronometro_separador1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/puntos"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_cronometro_arrancar"
        app:layout_constraintStart_toEndOf="@+id/activity_cronometro_horas"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.508" />

    <TextView
        android:id="@+id/activity_cronometro_separador2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/puntos"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_cronometro_arrancar"
        app:layout_constraintStart_toEndOf="@+id/activity_cronometro_minutos"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/activity_cronometro_parar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/parar"
        app:layout_constraintBottom_toTopOf="@+id/activity_cronometro_reiniciar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>